refactor(properties): migration property v2
migrate to property v2

keep Object from in v1

update and fix tests