@@ -1,12 +1,14 @@
 package io.kestra.plugin.fs.ftp;
 
-import com.google.common.collect.ImmutableMap;
+import io.kestra.core.junit.annotations.KestraTest;
+import io.kestra.core.models.property.Property;
 import io.kestra.core.runners.RunContextFactory;
 import io.kestra.core.utils.IdUtils;
 import io.kestra.core.utils.TestsUtils;
-import io.kestra.core.junit.annotations.KestraTest;
 import jakarta.inject.Inject;
 import org.junit.jupiter.api.Test;
+
+import java.util.Map;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
@@ -34,51 +36,51 @@ class ListTest {
         List.ListBuilder<?, ?> builder = List.builder()
             .id(ListTest.class.getSimpleName())
             .type(ListTest.class.getName())
-            .from("/upload" + dir)
-            .host("localhost")
-            .port("6621")
-            .username("guest")
-            .password("guest");
+            .from(Property.of("/upload" + dir))
+            .host(Property.of("localhost"))
+            .port(Property.of("6621"))
+            .username(Property.of("guest"))
+            .password(Property.of("guest"));
 
         List task = builder.build();
 
-        List.Output run = task.run(TestsUtils.mockRunContext(runContextFactory, task, ImmutableMap.of()));
+        List.Output run = task.run(TestsUtils.mockRunContext(runContextFactory, task, Map.of()));
 
         assertThat(run.getFiles().size(), is(7));
 
         task = builder
-            .regExp(".*\\" + dir + "\\/" + lastFile + "\\.(yml|yaml)")
+            .regExp(Property.of(".*\\" + dir + "\\/" + lastFile + "\\.(yml|yaml)"))
             .build();
 
-        run = task.run(TestsUtils.mockRunContext(runContextFactory, task, ImmutableMap.of()));
+        run = task.run(TestsUtils.mockRunContext(runContextFactory, task, Map.of()));
 
         assertThat(run.getFiles().size(), is(1));
 
         task = List.builder()
             .id(ListTest.class.getSimpleName())
             .type(ListTest.class.getName())
-            .from("/upload" + dir)
-            .host("localhost")
-            .port("6621")
-            .username("guest")
-            .password("guest")
-            .recursive(true).build();
+            .from(Property.of("/upload" + dir))
+            .host(Property.of("localhost"))
+            .port(Property.of("6621"))
+            .username(Property.of("guest"))
+            .password(Property.of("guest"))
+            .recursive(Property.of(true)).build();
 
-        run = task.run(TestsUtils.mockRunContext(runContextFactory, task, ImmutableMap.of()));
+        run = task.run(TestsUtils.mockRunContext(runContextFactory, task, Map.of()));
 
         assertThat(run.getFiles().size(), is(13));
 
         task = List.builder()
             .id(ListTest.class.getSimpleName())
             .type(ListTest.class.getName())
-            .from("/" + dir)
-            .host("localhost")
-            .port("6621")
-            .username("guest")
-            .password("guest")
-            .recursive(true).build();
+            .from(Property.of("/" + dir))
+            .host(Property.of("localhost"))
+            .port(Property.of("6621"))
+            .username(Property.of("guest"))
+            .password(Property.of("guest"))
+            .recursive(Property.of(true)).build();
 
-        run = task.run(TestsUtils.mockRunContext(runContextFactory, task, ImmutableMap.of()));
+        run = task.run(TestsUtils.mockRunContext(runContextFactory, task, Map.of()));
 
         assertThat(run.getFiles().size(), is(0));
     }
